<resources>
    <string name="app_name">StoryApp</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="sample_name">Ini nama</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>